--- a/src/pages/pt-welcome.html
+++ b/src/pages/pt-welcome.html
@@ -19,5 +19,16 @@ description: Welcome to Property Tycoon!
 <spacer size="32"></spacer>
 
 <center>
-	<button class="rounded default" href="#">Visit our site to learn more</button>
+	<button class="rounded default" href="https://www.propertytycoon.com/">Learn more</button>
 </center>
+
+<!-- this seems to work better as a centered button on yahoo web mail than the above markup, although i'm not sure how to make it have rounded corners -->
+<!-- <table>
+	<tbody>
+		<tr>
+			<td style="text-align:center">
+				<a style="background: #46ceb9; display: inline-block; width: 200px; padding: 10px; color: #fff; text-decoration: none; text-align:center; font-weight: 100" href="https://qwe.com">Learn more</a>
+			</td>
+		</tr>
+	</tbody>
+</table> -->
