--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,44 +12,40 @@ subject: My Email Templates
   <row>
     <columns small="12">
 
-    <p class="lead">Hi there!</p>
-    <p style="color: #484848; line-height: 1.5;">Thanks for downloading <a href="http://foundation.zurb.com/emails/docs/">Foundation for Emails!</a> Your days of coding up painful HTML emails are officially over. You’ll soon be cranking out some slick, responsive emails in no time! To help get you up and running, we've put together 11 templates for the most common email use cases including newsletters, transactional emails, and marketing blasts. Feel free to customize them to your hearts content.</p>
+    <p class="text-center" style="color: #484848; line-height: 1.5;">This file is in <strong>/src/pages/index/js</strong></p>
+    <p class="text-center" style="color: #484848; line-height: 1.5;">Visit <a href="http://foundation.zurb.com/emails/docs/">Foundation for Emails</a> for more info.</p>
 
-    <spacer size="16"></spacer>
+    <spacer size="32"></spacer>
+
+    <h4 class="lead text-center">Examples that come with Foundation</h4>
 
     <center>
       <menu class="vertical">
-        <item href="{{root}}basic.html" target="_blank">Basic Template</item>
-        <item href="{{root}}drip.html" target="_blank">Drip Template</item>
-        <item href="{{root}}hero.html" target="_blank">Hero Template</item>
-        <item href="{{root}}marketing.html" target="_blank">Marketing Template</item>
-        <item href="{{root}}newsletter.html" target="_blank">Newsletter Template</item>
-        <item href="{{root}}newsletter-2.html" target="_blank">Newsletter 2 Template</item>
-        <item href="{{root}}order.html" target="_blank">Order Template</item>
-        <item href="{{root}}password.html" target="_blank">Password Template</item>
-        <item href="{{root}}sidebar.html" target="_blank">Sidebar Template</item>
-        <item href="{{root}}sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
-        <item href="{{root}}welcome.html" target="_blank">Welcome Template</item>
+        <item href="{{root}}examples/basic.html" target="_blank">Basic Template</item>
+        <item href="{{root}}examples/drip.html" target="_blank">Drip Template</item>
+        <item href="{{root}}examples/hero.html" target="_blank">Hero Template</item>
+        <item href="{{root}}examples/marketing.html" target="_blank">Marketing Template</item>
+        <item href="{{root}}examples/newsletter.html" target="_blank">Newsletter Template</item>
+        <item href="{{root}}examples/newsletter-2.html" target="_blank">Newsletter 2 Template</item>
+        <item href="{{root}}examples/order.html" target="_blank">Order Template</item>
+        <item href="{{root}}examples/password.html" target="_blank">Password Template</item>
+        <item href="{{root}}examples/sidebar.html" target="_blank">Sidebar Template</item>
+        <item href="{{root}}examples/sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
+        <item href="{{root}}examples/welcome.html" target="_blank">Welcome Template</item>
       </menu>
     </center>
 
-    <spacer size="16"></spacer>
+    <spacer size="32"></spacer>
 
-    <p>Happy Coding,</p>
-    <p>The Foundation Team</p>
+    <h4 class="lead text-center">Property Tycoon email templates</h4>
 
-
-    <spacer size="16"></spacer>
+    <center>
+      <menu class="vertical">
+        <item href="{{root}}property-tycoon/empty.html" target="_blank">An Empty email</item>
+        <item href="{{root}}property-tycoon/welcome.html" target="_blank">The Welcome Email</item>
+      </menu>
+    </center>
 
     </columns>
   </row>
 </container>
-
-<spacer size="16"></spacer>
-
-<center>
-  <small>Keep on keepin' on. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb.com/">ZURB</a> </small>
-</center>
-
-<spacer size="16"></spacer>
-
